# NodePasta

./: .clang-format  .gitignore  .gitmodules  .style.yapf  LICENSE  README.md  example_graph.py  ng_errors.py  node.py  node_graph.py  pyproject.toml  requirements.txt  setup.cfg  tk_node_graph.py  upload.sh
ImPasta/: CMakeLists.txt  setup.py  test.py
ImPasta/inc/: gui_utils.h  node.h  nodeGraph.h  test.h
ImPasta/src/: ImPastaGUI.cpp  gui_utils.cpp  main.cpp  nodeGraph.cpp
example_nodes/: const_source.py  nullable_input.py  output_node.py  power_node.py  sum_node.py
examples/: basic_gui.py  file_graph.py  manual_graph.py  node_test_case.py
examples/example_nodes/: const_source.py  enumNode.py  listifier.py  offset_node.py  output_node.py  power_node.py  sum_list.py  sum_node.py
examples/test_graphs/: test.json  test_graph1.json
nodepasta/: argtypes.py  errors.py  id_manager.py  ng_log.py  node.py  node_graph.py  nodegraph.py  ports.py  tk_node_graph.py  utils.py
nodepasta/impasta/: imgui_arg_handlers.py  imgui_node_graph.py
nodepasta/testing/: tester.py
nodepasta/tk/: tk_arg_handlers.py  tk_node_graph.py
