[metadata]
name = nodepasta
version = 1.1.2
author = Alagyn
description = A Node Based Visual Scripting System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alagyn/NodePasta
project_urls =
    Bug Tracker = https://github.com/alagyn/NodePasta/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Typing :: Typed
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
packages =
    nodepasta
    nodepasta.tk
    nodepasta.testing
python_requires = >=3.6
